# dbx-model-planner

./: .gitignore  README.md  _debug_sku_mapping.py  pyproject.toml
.codex/skills/azure-dbx-capacity-pricing/: SKILL.md
.codex/skills/azure-dbx-capacity-pricing/references/: apis-and-sku-notes.md
.codex/skills/databricks-cli-planner/: SKILL.md
.codex/skills/databricks-cli-planner/references/: commands-and-guardrails.md
.codex/skills/hf-hub-prestage-planner/: SKILL.md
.codex/skills/hf-hub-prestage-planner/references/: metadata-and-downloads.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: agent-handoff.md  architecture.md  decision-framework.md  demo.html  development-backlog.md  domain-model.md  llmfit-analysis.md  mvp-spec.md
src/dbx_model_planner/: __init__.py  cli.py  config.py  terminal_app.py
src/dbx_model_planner/adapters/: __init__.py
src/dbx_model_planner/adapters/azure/: __init__.py  dbu_rates.py  enricher.py  price_cache.py  pricing.py  sku.py
src/dbx_model_planner/adapters/huggingface/: __init__.py  catalog.py  models.py  normalizer.py
src/dbx_model_planner/auth/: __init__.py  credentials.py  keyring.py  wizard.py
src/dbx_model_planner/catalog/: __init__.py  examples.py
src/dbx_model_planner/collectors/: __init__.py
src/dbx_model_planner/collectors/databricks/: __init__.py  inventory.py
src/dbx_model_planner/collectors/databricks/fixtures/: mock_inventory.json
src/dbx_model_planner/domain/: __init__.py  common.py  profiles.py  recommendations.py
src/dbx_model_planner/engines/: __init__.py  cost.py  fit.py  plan.py  score.py
src/dbx_model_planner/planners/: __init__.py  deployment.py  recommendations.py
src/dbx_model_planner/presentation/: __init__.py  renderers.py
src/dbx_model_planner/runtime/: __init__.py  context.py
src/dbx_model_planner/storage/: __init__.py  sqlite.py
src/dbx_model_planner/tui/: __init__.py  app.py  keys.py  state.py  views.py
tests/: test_auth.py  test_config_runtime_storage.py  test_cost_engine.py  test_dbu_rates.py  test_fit_engine.py  test_huggingface_adapter.py  test_plan_engine.py  test_price_cache.py  test_recommendation_flow.py  test_terminal_app.py
tests/azure_adapter/: test_azure_enricher.py
tests/azure_adapter/fixtures/: retail_prices_page_1.json  retail_prices_page_2.json
tests/databricks/: test_inventory_collector.py
