[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-model-planner"
version = "0.1.0"
description = "Planner for mapping models to Azure Databricks compute, runtimes, and costs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13,<15",
  "typer>=0.12,<1.0",
]

[project.scripts]
dbx-model-planner = "dbx_model_planner.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
