[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-model-planner"
version = "0.1.0"
description = "Interactive model-to-compute planner for Azure Databricks."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
  { name = "kaonash1", email = "luka.kutateladze@proton.me" },
]
keywords = ["databricks", "azure", "llm", "gpu", "model-serving", "planner"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "keyring>=25.0",
  "rich>=13,<15",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1.0",
]

[project.urls]
Repository = "https://github.com/kaonash1/dbx-model-planner"
Issues = "https://github.com/kaonash1/dbx-model-planner/issues"

[project.scripts]
dbx-model-planner = "dbx_model_planner.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dbx_model_planner = ["py.typed"]
